--- a/h2SimpleBackendLogin/src/main/resources/application.properties
+++ b/h2SimpleBackendLogin/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=update
+
+#connessione a mysql
+#connessione al mio db befe
+
+spring.datasource.url=jdbc:mysql://localhost:3306/befe
+spring.datasource.username=backend
+spring.datasource.password=tavolo
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
