--- a/h2SimpleBackendLogin/pom.xml
+++ b/h2SimpleBackendLogin/pom.xml
@@ -53,14 +53,14 @@
             </dependency>
 
             <!-- Database H2 in memoria -->
-            <dependency>
+            <!-- <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <scope>runtime</scope>
-            </dependency>
+            </dependency> -->
             <!-- Database mysql che sto provando a usare io -->
             <dependency>
-                <groupId>mysql</groupId>
+                <groupId>com.mysql</groupId>
              <artifactId>mysql-connector-j</artifactId>
                 <scope>runtime</scope>
             </dependency>
